# LEDROCK

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  sdkconfig
cli-app/: build.zig  build.zig.zon
cli-app/src/: main.zig
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/html/: index.html
firmware/src/: CMakeLists.txt  Kconfig.projbuild  color_mode.cpp  color_mode.h  http_server.cpp  http_server.h  led_controller.cpp  led_controller.h  ledrock.cpp  message.h  uart_cli.cpp  uart_cli.h  wifi.cpp
firmware/src/core/: color.cpp  color.h  led_driver.h  log.cpp  log.h  sys.cpp  sys.h
firmware/src/drivers/: ledstrip.cpp  ledstrip.h  uart.h
hardware/Ledrock/: Job.OutJob  Ledrock.BomDoc  Ledrock.PcbDoc  Ledrock.PcbLib  Ledrock.PrjPcb  Ledrock.PrjPcbStructure  Ledrock.SchDoc  Ledrock.SchLib
hardware/Ledrock/Manufacturing/: Status Report.Txt
hardware/Ledrock/Manufacturing/Gerber/: Ledrock-macro.APR_LIB  Ledrock.EXTREP  Ledrock.GBL  Ledrock.GBO  Ledrock.GBP  Ledrock.GBS  Ledrock.GM  Ledrock.GTL  (+5 more)
lightbar-app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ColorManager.cpp  ColorManager.h  ColorMode.cpp  ColorMode.h  ColorUtils.h  TimerManager.h  Utils.h  color.cpp  color.h  color_mode.cpp  color_mode.h  ledrock-fw.c  ledrock.c  ledrock.cpp
src/Colors/: ColorMode.h  ColorUtils.h  FadingColor.cpp  StaticColor.cpp  SwitchingColor.cpp
src/Events/: ButtonEvent.h  Event.h  LEDEvent.h  TimerEvent.h
src/Hardware/: LED.cpp  LED.h  Timer.cpp  Timer.h
src/core/: led_driver.h
src/drivers/: ledstrip.cpp  ledstrip.h
(+4 files in other folders)
